--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
 
-<iframe width="468" height="60" align="right">
+<iframe src="/views/googlmaps" width="600" height="600" align="right">
     Ваш браузер не поддерживает плавающие фреймы!
 </iframe>
 
@@ -13,7 +13,7 @@
 
 <form method="post" enctype="multipart/form-data" action="/load">
       
-      <input type="file" name="loadfile">
+      <input type="file" name="fixes">
       <input type="submit">
 </form>
 
