--- a/views/googlmaps.erb
+++ b/views/googlmaps.erb
@@ -19,7 +19,7 @@
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"),
             mapOptions);
-        var ctaLayer = new google.maps.KmlLayer("http://localhost:4567/kml");
+        var ctaLayer = new google.maps.KmlLayer("/kml");
             ctaLayer.setMap(map);
       }
     </script>
