--- a/views/googlmaps.erb
+++ b/views/googlmaps.erb
@@ -19,7 +19,7 @@
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"),
             mapOptions);
-        var ctaLayer = new google.maps.KmlLayer("/kml");
+        var ctaLayer = new google.maps.KmlLayer('http://calm-refuge-3928.herokuapp.com/kml');
             ctaLayer.setMap(map);
       }
     </script>
