change display time

--- a/load/kml.erb
+++ b/load/kml.erb
@@ -24,7 +24,7 @@
     </Placemark>
     <Placemark>
       <name>Point</name>
-      <description><%= "Date fix: #{@markEndPoint.date_fix}" %></description>
+      <description><%= "Date fix: #{Time.at @markEndPoint.t_i}" %></description>
       <Point>
         <altitudeMode>relative</altitudeMode>
         <coordinates>
