--- a/views/googlmaps.erb
+++ b/views/googlmaps.erb
@@ -24,6 +24,6 @@
     </script>
   </head>
   <body onload="initialize()">
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+    <div id="map_canvas" style="width:50%; height:50%; position: absolute; right:10px"></div>
   </body>
 </html>
