--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,8 +16,7 @@
           center: new google.maps.LatLng(50.4774, 30.443),          
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
-        var map = new google.maps.Map(document.getElementById("map_canvas"),
-            mapOptions);
+        var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
         var ctaLayer = new google.maps.KmlLayer('http://nameless-fortress-3253.herokuapp.com/kml');
             ctaLayer.setMap(map);
       }
