--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,7 +13,8 @@
     <script type="text/javascript">
       function initialize() {
         var mapOptions = {
-          center: new google.maps.LatLng(50.4774, 30.443),          
+          center: new google.maps.LatLng(50.4774, 30.443), 
+          zoom: 4,         
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
