--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,11 +14,12 @@
       function initialize() {
         var mapOptions = {
           center: new google.maps.LatLng(50.4774, 30.443), 
-          zoom: 4,         
+          zoom: 8,         
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-        
+        var ctaLayer = new google.maps.KmlLayer('http://nameless-fortress-3253.herokuapp.com/kml');
+        ctaLayer.setMap(map);
       }
     </script>
   </head>
