--- a/views/layout.erb
+++ b/views/layout.erb
@@ -18,7 +18,7 @@
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-        var ctaLayer = new google.maps.KmlLayer('http://gmaps-samples.googlecode.com/svn/trunk/ggeoxml/cta.kml');
+        var ctaLayer = new google.maps.KmlLayer('http://nameless-fortress-3253.herokuapp.com/kml');
         ctaLayer.setMap(map);
       }
     </script>
