--- a/load/kml.erb
+++ b/load/kml.erb
@@ -25,7 +25,7 @@
       </LineString>
     </Placemark>
     <Placemark>
-      <name>Point</name>
+      <name>Simple placemark</name>
       <description><%="Date: #{Time.at @markEndPoint.t_i}"%></description>
       <Point>
         <altitudeMode>relative</altitudeMode>
@@ -34,6 +34,5 @@
         </coordinates>
       </Point>
     </Placemark>
-
   </Document>
 </kml>
