kml add time now

--- a/load/kml.erb
+++ b/load/kml.erb
@@ -26,7 +26,7 @@
     </Placemark>
     <Placemark>
       <name>Simple placemark</name>
-      <description><%="Date: #{Time.at @markEndPoint.t_i}"%></description>
+      <description><%="Date: #{Time.at @markEndPoint.t_i} and time now #{Time.now}"%></description>
       <Point>
         <altitudeMode>relative</altitudeMode>
         <coordinates>      
