--- a/views/googleMaps.erb
+++ b/views/googleMaps.erb
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    
+    <style type="text/css">
+     html { height: 100% }
+     body { height: 100%; margin: 0; padding: 0 }
+     #map_canvas { height: 100% }
+    </style>
     <script type="text/javascript"
       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBcw0VJvFR0vjHkLBvrGxiWN_Dj2HDcuFw&sensor=false">
     </script>
@@ -21,7 +25,7 @@
     </script>
   </head>
   <body onload="initialize()">
-    <div id="map_canvas" style="width:50%; height:100%; position: absolute; right:10px"></div>
+    <div id="map_canvas" style="width:100%; height:100%"></div>
     
   </body>
 </html>
