--- a/views/googleMaps.erb
+++ b/views/googleMaps.erb
@@ -24,7 +24,7 @@
       }
     </script>
   </head>
-  <body onclick="initialize()">
+  <body onload="initialize()">
     <div id="map_canvas" style="width:100%; height:100%"></div>
     
   </body>
