--- a/views/layout.erb
+++ b/views/layout.erb
@@ -15,7 +15,7 @@
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
         
-        var ctaLayer = new google.maps.KmlLayer('http://tranquil-eyrie-9235.herokuapp.com/kml');
+        var ctaLayer = new google.maps.KmlLayer('http://gentle-hollows-7316.herokuapp.com/kml');
         ctaLayer.setMap(map);
       }
     </script>
