--- a/views/googleMaps.erb
+++ b/views/googleMaps.erb
@@ -19,7 +19,7 @@
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
         
-        var ctaLayer = new google.maps.KmlLayer('http://gentle-hollows-7316.herokuapp.com/kml');
+        var ctaLayer = new google.maps.KmlLayer('http://gentle-hollows-7316.herokuapp.com/kmll');
         ctaLayer.setMap(map);
       }
     </script>
