--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     
     <script type="text/javascript"
-      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBcw0VJvFR0vjHkLBvrGxiWN_Dj2HDcuFw&sensor=false">
+      src="http://maps.googleapis.com/maps/api/js?key=xxxxxxxxx&sensor=false">
     </script>
     <script type="text/javascript">
       function initialize() {
@@ -15,7 +15,7 @@
         };
         var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
         
-        var ctaLayer = new google.maps.KmlLayer('http://gentle-hollows-7316.herokuapp.com/kml2');
+        var ctaLayer = new google.maps.KmlLayer('http://xxxxxxxx.herokuapp.com/kml2');
         ctaLayer.setMap(map);
       }
     </script>
